--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -54,7 +54,7 @@ jobs:
           echo storeFile=../key.jks >> signing.properties
           echo ${{ secrets.SIGNING_KEY }} | base64 --decode > key.jks
 
-      - #name: Build with Gradle (Canary)
+      #- name: Build with Gradle (Canary)
         #if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
         #shell: bash
         #run: |
