--- a/.github/workflows/custom_ci_build.yml
+++ b/.github/workflows/custom_ci_build.yml
@@ -52,7 +52,7 @@ jobs:
           echo keyAlias=${{ secrets.ALIAS }} >> signing.properties
           echo keyPassword='${{ secrets.KEY_STORE_PASSWORD }}' >> signing.properties
           echo storeFile=../key.jks >> signing.properties
-          echo ${{ secrets.SIGNING_KEY }} | base64 --decode --ignore-garbage > key.jks
+          echo ${{ secrets.SIGNING_KEY }} | base64 --decode > key.jks
 
       - name: Build with Gradle (Canary)
         if: github.event_name != 'pull_request'
